@@ -124,6 +124,7 @@ wxMSW:
 - Fix wxMenuEvent::GetMenu() for wxEVT_MENU_{OPEN,CLOSE} in MDI frames.
 - Added support for reading multi string values to wxRegKey (Carl Godkin).
 - Fix updating wxSpinCtrlDouble tooltip text (Laurent Poujoulat).
+- Fix appearance of checked disabled wxToolBar tools with custom images.
 
 wxOSX/Cocoa:
 
